syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "FeedReader.Protos";

service FeedReaderServerApi
{
    rpc Login(LoginRequest) returns (UserInfo);

    rpc MarkFeedAsReadedFromTimestamp(MarkFeedAsReadedFromTimestampRequest) returns (google.protobuf.Empty);

    rpc RefreshFeed(RefreshFeedRequest) returns (RefreshFeedResponse);

    rpc GetFeedsByCategory(GetFeedsByCategoryRequest) returns (GetFeedsByCategoryResponse);

    rpc GetStaredFeedItems(GetStaredFeedItemsRequest) returns (GetStaredFeedItemsResponse);

    rpc StarFeedItem(StarFeedItemRequest) returns (google.protobuf.Empty);

    rpc UnstarFeedItem(UnstarFeedItemRequest) returns (google.protobuf.Empty);

    rpc SubscribeFeed(SubscribeFeedRequest) returns (SubscribeFeedResponse);

    rpc UnsubscribeFeed(UnsubscribeFeedRequest) returns (google.protobuf.Empty);

    rpc UpdateFeed(UpdateFeedRequest) returns (google.protobuf.Empty);
}

message LoginRequest
{
}

message MarkFeedAsReadedFromTimestampRequest
{
    string FeedUri = 2;

    google.protobuf.Timestamp Timestamp = 3; 
}

message RefreshFeedRequest
{
    string FeedUri = 1;

    string NextRowKey = 2;
}

message RefreshFeedResponse
{
    FeedInfo FeedInfo = 1;

    repeated FeedItemMessage FeedItems = 2;

    string NextRowKey = 3;
}

message GetFeedsByCategoryRequest
{
    FeedCategory Category = 1;
    int32 Page = 2;
}

message GetFeedsByCategoryResponse
{
    repeated FeedItemMessageWithFeedInfo FeedItems = 1;
}

message GetStaredFeedItemsRequest
{
    string NextRowKey = 1;
}

message GetStaredFeedItemsResponse
{
    repeated FeedItemMessageWithFeedInfo FeedItems = 1;

    string NextRowKey = 2;
}

message StarFeedItemRequest
{
    FeedItemMessageWithFeedInfo FeedItem = 1;
}

message UnstarFeedItemRequest
{
    string FeedItemUri = 1;

    google.protobuf.Timestamp FeedItemPubDate = 2;
}

message SubscribeFeedRequest
{
    string OriginalUri = 1;

    string Group = 3;
}

message SubscribeFeedResponse
{
    FeedInfo Feed = 1;
}

message UnsubscribeFeedRequest
{
    string FeedUri = 1;
}

message UpdateFeedRequest
{
    string FeedUri = 1;

    string FeedGroup = 3;
}

enum FeedCategory {
    FEEDCATEGORY_DEFAULT = 0;
    FEEDCATEGORY_ART = 1;
    FEEDCATEGORY_BUSINESS = 2;
    FEEDCATEGORY_NEWS = 3;
    FEEDCATEGORY_SPORT = 4;
    FEEDCATEGORY_Technology = 5;
    FEEDCATEGORY_KIDS = 6;
}

message UserInfo
{
    string Token = 1;

    string Uuid = 2;

    repeated FeedInfo Feeds = 3;
}

message FeedInfo
{
    string Uri = 1;

    string OriginalUri = 2;

    string IconUri = 3;

    string Name = 4;

    string Description = 5;

    string WebsiteLink = 6;

    string Group = 7;
}

message FeedItemMessage
{
    string Title = 1;

    string PermentLink = 2;

    string TopicPictureUri = 3;

    string Summary = 4;

    string Content = 5;

    google.protobuf.Timestamp PubDate = 6;

    bool IsReaded = 7;
    
    bool IsStared = 8;
}

message FeedItemMessageWithFeedInfo
{
    FeedItemMessage FeedItem = 1;

    string FeedUri = 2;

    string FeedIconUri = 3;

    string FeedName = 4;
}